[package]

name = "zoc"
version = "0.0.1"
authors = ["ozkriff <ozkriffgmail.com>"]
description = "ZoC is turn-based hexagonal strategy game written in Rust"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["opengl", "3D", "game", "gfx"]
repository = "https://github.com/ozkriff/zoc"

[[bin]]
name = "zoc"

[dependencies.visualizer]
path = "./src/visualizer/"

[package.metadata.android]
assets = "assets"
