[package]

name = "zoc"
version = "0.0.1"
authors = ["ozkriff <ozkriffgmail.com>"]
description = "ZoC is turn-based hexagonal strategy game written in Rust"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["opengl", "3D", "game", "gfx"]
repository = "https://github.com/ozkriff/zoc"

[package.metadata.android]
assets = "assets"

[dependencies.core]
path = "core"

[dependencies]
gfx_core = "*"
gfx_device_gl = "*"
gfx_window_glutin = "*"
gfx = "*"
glutin = "*"
collision = "*"
cgmath = "*"
time = "*"
rand = "*"
rusttype = "*"

[dependencies.image]
version = "*"
default-features = false
features = ["png_codec"]

[target.arm-linux-androideabi.dependencies]
android_glue = "0.2.0"
