[package]

name = "visualizer"
version = "0.0.1"
authors = ["ozkriff <ozkriffgmail.com>"]

[lib]
name = "visualizer"
doctest = false

[dependencies.glutin]
version = "*"
features = ["window"]

[dependencies.core]
path = "../core/"

[dependencies.common]
path = "../common/"

[dependencies.zgl]
path = "../zgl/"

[dependencies]
cgmath = "*"
time = "*"
rand = "*"
