[package]

name = "visualizer"
version = "0.0.1"
authors = ["ozkriff <ozkriffgmail.com>"]

[lib]
name = "visualizer"
doctest = false

[dependencies.core]
path = "../core/"

[dependencies.common]
path = "../common/"

[dependencies.zgl]
path = "../zgl/"

[dependencies]
glutin = "*"
collision = "*"
cgmath = "*"
time = "*"
rand = "*"
num = "*"
