[package]

name = "visualizer"
version = "0.0.1"
authors = ["ozkriff <ozkriffgmail.com>"]

[lib]
name = "visualizer"
doctest = false

[dependencies.core]
path = "../core/"

[dependencies]
gfx_core = "*"
gfx_device_gl = "*"
gfx_window_glutin = "*"
gfx = "*"
glutin = "*"
collision = "*"
cgmath = "*"
time = "*"
rand = "*"
rusttype = "*"

[dependencies.image]
version = "*"
default-features = false
features = ["png_codec"]

[target.arm-linux-androideabi.dependencies]
android_glue = "0.2.0"
