[package]

name = "zgl"
version = "0.0.1"
authors = ["ozkriff <ozkriffgmail.com>"]

[lib]
name = "zgl"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dependencies.image]
git = "https://github.com/PistonDevelopers/image"

[dependencies.stb_tt]
git = "https://github.com/ozkriff/stb-tt-rs"

[dependencies.common]
path = "../common/"

[dependencies.zoc_gl]
path = "../zoc_gl/"

[dependencies]
time = "*"
rand = "*"
libc = "*"
