[package]

name = "zgl"
version = "0.0.1"
authors = ["ozkriff <ozkriffgmail.com>"]

[lib]
name = "zgl"

[dependencies.image]
version = "*"
default-features = false
features = ["png_codec"]

[dependencies.stb_tt]
git = "https://github.com/ozkriff/stb-tt-rs"

[dependencies.common]
path = "../common/"

[dependencies.zoc_gl]
path = "../zoc_gl/"

[dependencies]
cgmath = "*"
time = "*"
rand = "*"
libc = "*"
num = "*"
